fix spacing

--- a/client/src/pages/Authentication/Registration/Register.css
+++ b/client/src/pages/Authentication/Registration/Register.css
@@ -115,7 +115,7 @@
   width: 400px;
   padding: 30px 15px;
   border: 5px solid #1DAAB1;
-  margin: auto 30px auto auto;
+  margin: auto 60px auto auto;
   max-height: 80vh;
   overflow-y: auto;
 }
@@ -194,7 +194,7 @@
 }
 
 /* Large screens */
-@media (min-width: 1400px) {
+@media (min-width: 1600px) {
   .register-img {
     height: 100vh;
     width: auto;
@@ -202,7 +202,7 @@
   }
   
   .register-form-container {
-    margin-right: 80px;
+    margin-right: 150px;
   }
 }
 
